updated header styling

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary" class="navbar">
-  <div>Dollup</div>
+  <div class="title">Dollup</div>
   <div>
-    <span>Upload</span>
-    <span>Progress</span>
+    <button mat-button>Upload</button>
+    <button mat-button>Progress</button>
   </div>
 </mat-toolbar>
