--- a/src/app/layout/header/header.component.css
+++ b/src/app/layout/header/header.component.css
@@ -1,7 +1,4 @@
-.navbar {
-  justify-content: space-between;
-}
-
-span {
-  padding-right: 1rem;
+.title {
+  padding-left: 15px;
+  padding-right: 50px;
 }
