--- a/src/app/layout/content/content.component.html
+++ b/src/app/layout/content/content.component.html
@@ -1,6 +1,6 @@
 <div class="content">
   <div fxLayout="row wrap" fxLayoutGap="16px grid">
-    <div fxFlex="50%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let num of [1,2]">
+    <div fxFlex="50%" fxFlex.xs="100%" *ngFor="let num of [1,2]">
       <mat-card class="mat-elevation-z4">Basic card {{ num }}</mat-card>
     </div>
   </div>
