updated responsive header

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,7 +1,3 @@
-<mat-toolbar color="primary" class="navbar">
-  <div class="title">Dollup</div>
-  <div>
-    <button mat-button>Upload</button>
-    <button mat-button>Progress</button>
-  </div>
-</mat-toolbar>
+<div class="header">
+  <app-tool-bar></app-tool-bar>
+</div>
