added side nav menu

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -2,8 +2,9 @@
   <app-header [sidenav]="sidenav"></app-header>
 
   <mat-sidenav-container class="sidenav-container">
-    <mat-sidenav #sidenav fixedTopGap="56">
-      <span>test</span>
+    <mat-sidenav #sidenav class="sidenav">
+      <p><button mat-button>Upload</button></p>
+      <p><button mat-button>Progress</button></p>
     </mat-sidenav>
 
     <mat-sidenav-content>
