--- a/src/app/component/url-card/url-card.component.html
+++ b/src/app/component/url-card/url-card.component.html
@@ -1,6 +1,7 @@
 <mat-card class="card mat-elevation-z4">
   <mat-card-header>
-    <mat-card-title>URL/IP discovered</mat-card-title>
+    <mat-card-title>APK-v1.1.1</mat-card-title>
+    <mat-card-subtitle>URL/IP discovered</mat-card-subtitle>
   </mat-card-header>
   <mat-divider></mat-divider>
   <mat-card-content>
