added elevation to toolbar

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <mat-toolbar class="navbar" color="primary">
+  <mat-toolbar class="navbar mat-elevation-z6" color="primary">
 
     <!-- Menu button -->
     <div class="menu-button" fxShow="true" fxHide.gt-xs="true">
