updated list to action list

--- a/src/app/component/apk-card/apk-card.component.html
+++ b/src/app/component/apk-card/apk-card.component.html
@@ -5,13 +5,13 @@
   </mat-card-header>
   <mat-divider></mat-divider>
   <mat-card-content>
-    <mat-list *ngFor="let num of [1,2,3,4,5,6,7,8,9]">
-      <mat-list-item>
+    <mat-action-list *ngFor="let num of [1,2,3,4,5,6,7,8,9]">
+      <mat-list-item (click)="test()">
         <mat-icon mat-list-icon>folder</mat-icon>
         <div mat-line>pepper {{num}}</div>
         <div mat-line>May 3, 2021</div>
       </mat-list-item>
-    </mat-list>
+    </mat-action-list>
   </mat-card-content>
   <mat-card-footer>
     <mat-paginator [length]="100"
