updated flex layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,28 @@
 <div class="layout-container">
+
+  <!-- Nav bar -->
   <app-nav-bar [sidenav]="sidenav"></app-nav-bar>
 
+  <!-- Side bar -->
   <mat-sidenav-container class="sidenav-container">
     <mat-sidenav #sidenav class="sidenav">
       <p><button mat-button>Upload</button></p>
       <p><button mat-button>Progress</button></p>
     </mat-sidenav>
 
+    <!-- content -->
     <mat-sidenav-content>
       <div class="content">
-        <div fxLayout="row wrap" fxLayoutGap="16px grid">
-
-          <div fxFlex="30%" fxFlex.xs="100%">
+        <div class="home" fxLayout="row wrap" fxLayoutGap="16px grid">
+          <div fxFlex="30%" fxFlex.lt-md="100%">
             <app-apk></app-apk>
           </div>
 
-          <div fxFlex="70%" fxFlex.xs="100%">
+          <div fxFlex="70%" fxFlex.lt-md="100%">
             <app-url></app-url>
           </div>
-
         </div>
+
       </div>
     </mat-sidenav-content>
 
