--- a/src/app/component/nav-bar/nav-bar.component.html
+++ b/src/app/component/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar class="navbar mat-elevation-z6" color="primary">
 
     <!-- Menu button -->
-    <div class="menu-button" fxShow="true" fxHide.gt-xs="true">
+    <div class="menu-button" fxShow="true" fxHide.gt-sm="true">
       <button mat-icon-button (click)="sidenav.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
@@ -12,7 +12,7 @@
     <div class="title">Dollup</div>
 
     <!-- Menu -->
-    <div class="menu" fxShow="true" fxHide.lt-sm="true">
+    <div class="menu" fxShow="true" fxHide.lt-md="true">
       <button mat-button>Upload</button>
       <button mat-button>Progress</button>
     </div>
