--- a/src/app/component/nav-bar/nav-bar.component.html
+++ b/src/app/component/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <mat-toolbar class="navbar mat-elevation-z6" color="primary">
+  <mat-toolbar class="navbar mat-elevation-z16" color="primary">
 
     <!-- Menu button -->
     <div class="menu-button" fxShow="true" fxHide.gt-sm="true">
@@ -9,12 +9,16 @@
     </div>
 
     <!-- Title -->
-    <div class="title">Dollup</div>
+    <a mat-button href="/" class="title" >
+      <mat-icon style="padding-right: 5px">home</mat-icon>
+      <span style="font-size: large">Dollup</span>
+    </a>
+
 
     <!-- Menu -->
     <div class="menu" fxShow="true" fxHide.lt-md="true">
-      <button mat-button>Upload</button>
-      <button mat-button>Progress</button>
+      <a mat-button href="/upload">Upload</a>
+      <a mat-button href="/progress">Progress</a>
     </div>
 
   </mat-toolbar>
