--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div class="home" fxLayout="row wrap" fxLayoutGap="16px grid">
+  <div fxFlex="30%" fxFlex.lt-md="100%">
+    <app-apk></app-apk>
+  </div>
+
+  <div fxFlex="70%" fxFlex.lt-md="100%">
+    <app-url></app-url>
+  </div>
+</div>
