--- a/src/app/component/nav-bar/nav-bar.component.html
+++ b/src/app/component/nav-bar/nav-bar.component.html
@@ -1,6 +1,5 @@
 <div class="header">
-  <mat-toolbar class="navbar mat-elevation-z16" color="primary">
-
+  <mat-toolbar class="navbar mat-elevation-z12" color="primary">
     <!-- Menu button -->
     <div class="menu-button" fxShow="true" fxHide.gt-sm="true">
       <button mat-icon-button (click)="sidenav.toggle()">
@@ -10,16 +9,14 @@
 
     <!-- Title -->
     <a mat-button href="/" class="title" >
-      <mat-icon style="padding-right: 5px">home</mat-icon>
-      <span style="font-size: large">Dollup</span>
+      <mat-icon class="title-icon">home</mat-icon>
+      <span>Dollup</span>
     </a>
-
 
     <!-- Menu -->
     <div class="menu" fxShow="true" fxHide.lt-md="true">
       <a mat-button href="/upload">Upload</a>
       <a mat-button href="/progress">Progress</a>
     </div>
-
   </mat-toolbar>
 </div>
