--- a/src/app/component/upload/upload.component.css
+++ b/src/app/component/upload/upload.component.css
@@ -1,5 +1,32 @@
+.drop-zone {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+mat-card {
+  width: 100%;
+  height: 75vh;
+  text-align: center;
+  padding: 40px 40px 40px 40px;
+}
+
+mat-card-title {
+  padding: 16px
+}
+
+mat-card-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 ngx-dropzone {
   height: 50vh;
+  width: 150vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 ngx-dropzone-label {
