--- a/src/app/component/home/apk/apk.component.html
+++ b/src/app/component/home/apk/apk.component.html
@@ -1,7 +1,7 @@
 <mat-card class="card mat-elevation-z4">
   <mat-card-header>
     <mat-card-title>Uploaded APKs</mat-card-title>
-    <mat-card-subtitle>Completed</mat-card-subtitle>
+    <mat-card-subtitle>Received</mat-card-subtitle>
   </mat-card-header>
   <mat-divider></mat-divider>
   <mat-card-content>
